<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/size_10dp">

    <RelativeLayout
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_60">


        <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/size_10sp"
            android:src="@drawable/ic_delete_black_24dp"
            android:contentDescription="@string/description_text"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/size_10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/size_5dp"
            android:layout_toEndOf="@id/delete_icon"
            android:text="@string/DELETE"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_marginLeft="@dimen/size_5dp"
            android:layout_toRightOf="@id/delete_icon" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/view_foreground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/putih">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/size_15sp"
            android:layout_height="@dimen/size_178dp"
            app:cardCornerRadius="@dimen/size_10sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_5dp"
                android:layout_marginLeft="@dimen/size_120dp"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/size_120dp"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:id="@+id/posterTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/item_movie_title"
                    android:textSize="@dimen/size_19sp"
                    android:textStyle="bold" />

                <RatingBar
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:clickable="false"
                    android:numStars="5"
                    android:rating="4"
                    android:stepSize="0.5"
                    android:layout_marginTop="@dimen/size_5dp"
                    android:theme="@style/RatingBar"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:progressTint="@color/yellow_600"
                    android:progressBackgroundTint="@color/grey_60"
                    android:secondaryProgressTint="@android:color/transparent"
                    tools:ignore="RtlHardcoded"
                    tools:targetApi="lollipop" />

                <TextView
                    android:id="@+id/posterReleaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/abuabu"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/size_5dp"
                    android:text="@string/item_movie_category" />


                <TextView
                    android:id="@+id/posterDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_5dp"
                    android:maxLength="73"
                    android:text="@string/item_movie_description" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/size_100dp"
            android:layout_height="@dimen/size_150dp"
            android:layout_alignTop="@id/cardView"
            android:layout_marginTop="@dimen/size_min13dp"
            android:layout_marginLeft="@dimen/size_30dp"
            app:cardCornerRadius="@dimen/size_5dp"
            android:layout_marginStart="@dimen/size_30dp"
            tools:ignore="RtlHardcoded">

            <ImageView
                android:id="@+id/posterImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/poster_aquaman"
                android:contentDescription="@string/poster_description_text" />

        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</FrameLayout>